--- a/app/views/guests/index.html.erb
+++ b/app/views/guests/index.html.erb
@@ -5,7 +5,6 @@
 <div class="panel panel-default" style="width:100%;">
   <div class="panel-heading"><strong>Search Guests</strong></div>
   <div class="panel-body">
-
 <%= form_tag(guests_path, :method => "get", class: "navbar-form", id: "search-form") do %>
           <div class="input-append col-sm-10">
             <div class="row">
@@ -61,6 +60,34 @@
   <h3>No Guest Record Found</h3>
   <p>A guest record has not been found with this information.  If you are sure the inputted information is correct, click the button below to add a new guest record.</p>
 
-  <p><%= link_to new_guest_path, :class => "btn btn-success navbar-btn", :id => "newGuest" do %><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Add New Entry<% end %></p>
-
+  <p><%= link_to new_guest_path, :class => "btn btn-success navbar-btn", :id => "newGuest", :remote => true do %><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Add New Entry<% end %></p>
+  
 <% end %>
+
+<script>
+$(document).ready(function () {
+  var first_name, last_name, email, phone;
+  
+  $('#newGuest').click(function(){
+      // Getting Value from search form
+       first_name = $('input[id="search_first_name"]').val();
+       last_name = $('input[id="search_last_name"]').val();
+       email = $('input[id="search_email"]').val();
+       phone = $('input[id="search_phone"]').val();
+       
+       setTimeout(function(){ 
+           valueSetter();
+        }, 150);
+  })
+  // Setting Value for new Guest form
+      function valueSetter (y) {
+          $('input[id="guest_first_name"]').val(first_name);
+          $('input[id="guest_last_name"]').val(last_name);
+          $('input[id="guest_email"]').val(email);
+          $('input[id="guest_phone"]').val(phone);
+      }
+
+})
+</script>
+
+
